Style added to all components

--- a/pokemon-game/src/Pokedex.css
+++ b/pokemon-game/src/Pokedex.css
@@ -1,6 +1,19 @@
+.Pokedex{
+  text-align: center;
+}
+/* 
+    Looser winner tags 
+*/
+.Pokedex-winner{
+  color: #4caf50;
+}
+.Pokedex-loser{
+  color: #e91e63;
+}
+
 .Pokedex-cards{
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-
+  
 }
