--- a/pokemon-game/src/Pokecard.css
+++ b/pokemon-game/src/Pokecard.css
@@ -1,8 +1,8 @@
 .Pokecard{
-  width: 250px;
+  width: 300px;
   padding: 10px;
   margin: 1rem;
-  box-shadow: 7px 10px 12px -5px rfga(0, 0, 0, .56);
+  box-shadow: 7px 10px 12px -5px rgba(0, 0, 0, .56);
   text-align: center;
   background: white;
   border-radius: 3px;
