--- a/lotto-app/src/App.css
+++ b/lotto-app/src/App.css
@@ -19,6 +19,10 @@
   }
 } */
 .App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
+  background-color: darkgray;
 }
 
