--- a/lotto-app/src/Lotto.css
+++ b/lotto-app/src/Lotto.css
@@ -1,4 +1,22 @@
 .Lotto{
   border: 2px solid grey;
   border-radius: 15px;
+  width: 40em;
+  padding: 2em;
+  box-shadow: 3px 3px grey;
+  margin: 1.5em;
+}
+.Lotto-can{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+.Lotto-btn{
+  background-color: darkblue;
+  color: white;
+  border-radius: 10px;
+  margin: 1em auto;
+  padding: 10px 15px;
+  font-weight: 800;
 }
