--- a/lotto-app/src/App.css
+++ b/lotto-app/src/App.css
@@ -23,6 +23,6 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  background-color: darkgray;
+  background-color: lightblue;
 }
 
