--- a/lights-out/src/Cell.css
+++ b/lights-out/src/Cell.css
@@ -1,9 +1,11 @@
 .Cell {
-  height: 100px;
-  width: 100px;
-  background-color: darkgray;
+  height: 5vh;
+  width: 3vw;
+  border-radius: 5px;
+  background-color: #263238;
+  transition: background-color .7s ease;
+  border: 2px solid white;
 }
-
 .Cell-lit {
-  background-color: white;
+  background-color: #00bcd4;
 }
