--- a/lights-out/src/index.css
+++ b/lights-out/src/index.css
@@ -4,7 +4,7 @@ code {
 }
 
 body {
-    margin: 0;
+  margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -15,5 +15,7 @@ body {
   padding-top: 50px;
   color: white;
   text-align: center;
+  background: #78aeb5;
+  background-image: linear-gradient(90deg, #ffffd9, #eff9bd, #d5efb3, #a9ddb7, #74c9bd, #46b4c2, #2897bf, #2073b2, #234ea0, #1d3185, #1d3185);
 }
 
