--- a/lights-out/src/Board.css
+++ b/lights-out/src/Board.css
@@ -1,6 +1,8 @@
 .Board {
   margin: 0 auto;
-  box-shadow: 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+  box-shadow: 0 0 50px #fff, -10px 0 80px #800E0B, 10px 0 80px #0ff;
+  border: 1px solid white;
+  border-radius: 5px;
 }
 
 /* ANIMATION  */
@@ -45,8 +47,27 @@
   -o-animation: neon-blue 2s linear infinite;
 }
 
-@keyframes neon-orange {
+/* 
+WINNER ANIMATION WHEN USER WINS 
+*/
+.winner{
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   margin: 100px;
+}
 
+/* ANIMATION FOR WINNER */
+.winner .neon-blue,
+.wineer .neon-orange{
+  font-size: 200px;
+}
+/* 
+ */
+/* SETS FOR ANIMATIONS CSS ON TEXT */
+/* 
+ */
+@keyframes neon-orange {
   0%,
   100% {
     text-shadow: 0 0 1vw #FA1C16, 0 0 3vw #FA1C16, 0 0 10vw #FA1C16, 0 0 10vw #FA1C16, 0 0 .4vw #FED128, .5vw .5vw .1vw #806914;
@@ -58,8 +79,10 @@
     color: #806914;
   }
 }
-
-
+/* 
+ */
+/* 
+ */
 @keyframes neon-blue {
   0%,
   100% {
@@ -72,3 +95,4 @@
     color: #146C80;
   }
 }
+/* END */
