--- a/jokes-api-project/src/Joke.css
+++ b/jokes-api-project/src/Joke.css
@@ -36,14 +36,60 @@
   border: 3px solid red;
   box-shadow: 0 10px 38px rgba(0, 0, 0, .2), 0 10px 12px rgba(0, 0, 0, .1)
 }
+/* 
+  ARROWS */
 .fa-arrow-up , .fa-arrow-down{
   font-size: 1.5em;
   cursor: pointer;
   padding: .1em;
+  transition: all .3s;
 }
+.fa-arrow-up:hover{
+   animation-name: move-up;
+   animation-duration: .7s;
+   animation-timing-function: ease-out;
+   color: green;
+}
+.fa-arrow-down:hover {
+  animation-name: move-down;
+  animation-duration: .7s;
+  animation-timing-function: ease-out;
+  color: red;
+}
+
 .Joke-smiley{
   font-size: 3rem;
   margin-left: auto;
   border-radius: 50%;
   box-shadow: 0 10px 38px rgba(0, 0, 0, .2), 0 10px 12px rgba(0, 0, 0, .1);
+}
+
+
+/* ARROWS ANIMATIONS MIXINGS */
+@keyframes move-up {
+
+  0%,
+  50%,
+  100% {
+    transform: translateY(0);
+  }
+
+  25%,
+  75% {
+    transform: translateY(-3px);
+  }
+}
+
+@keyframes move-down {
+
+  0%,
+  50%,
+  100% {
+    transform: translateY(0);
+  }
+
+  25%,
+  75% {
+    transform: translateY(3px);
+  }
 }
