--- a/vending-machine/src/VendingMachine.css
+++ b/vending-machine/src/VendingMachine.css
@@ -1,7 +1,14 @@
-.VendingMachine{
-  background-position: center;
+.VendingMachine {
+    text-align: center;
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  /* background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
   /* height: 800px; */
 }
 .VendingMachine h1{
