--- a/colours-palete-app/src/ColorBox.css
+++ b/colours-palete-app/src/ColorBox.css
@@ -6,4 +6,62 @@
   display: inline-block;
   position: relative;
   cursor: pointer;
+  margin-bottom: -3.7px;
+}
+/* 
+  BUTTON 
+*/
+.ColorBox-copyBtn{
+  width: 100px;
+  height: 30px;
+  position: absolute;
+  /* display: inline-block; */
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  outline: none;
+  background: rgba(255, 255, 255, .3);
+  border: none;
+  font-size: 1rem;
+  line-height: 20px;
+  color: white;
+  text-transform: uppercase;
+  opacity: 0;
+}
+/* 
+  HOVER ON COPY BTN 
+*/
+.ColorBox:hover .ColorBox-copyBtn{
+  opacity: 1;
+  transition: .5s;
+}
+/* 
+  COLOR NAME 
+*/
+.ColorBox-content{
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  padding: 10px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+/* 
+  MORE 
+*/
+.ColorBox-more{
+  position: absolute;
+  border: none;
+  bottom: 0;
+  right: 0;
+  margin: 0;
+  font-size: 14px;
+  width: 60px;
+  height: 30px;
+  background: rgba(255, 255, 255, .3);
+  text-align: center;
+  line-height: 30px;
+  text-transform: uppercase;
 }
