--- a/colours-palete-app/src/ColorBox.css
+++ b/colours-palete-app/src/ColorBox.css
@@ -3,7 +3,7 @@
   /* height of the palette (Parent) */
   height: 25%; 
   margin: 0 auto;
-  display: inline-block;
+  /* display: inline-block; */
   position: relative;
   cursor: pointer;
   margin-bottom: -3.7px;
@@ -12,8 +12,8 @@
   BUTTON 
 */
 .ColorBox-copyBtn{
-  width: 100px;
-  height: 30px;
+  width: 30%;
+  height: 20%;
   position: absolute;
   /* display: inline-block; */
   top:50%;
@@ -64,4 +64,57 @@
   text-align: center;
   line-height: 30px;
   text-transform: uppercase;
+}
+
+/* 
+  OVERLAY COPY EFFECT CSS 
+*/
+/* background */
+.OverlayInCopy{
+  opacity: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  transition: transform .4s ease-in-out;
+  transform: scale(0.1);
+}
+.OverlayInCopy.show{ /* show is a class to be added on COPY */
+  opacity: 1;
+  transform: scale(9);
+  z-index: 10;
+  position: absolute;
+} 
+/* text on background */
+.Overlay-msg{
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+  color: white;
+  transform: scale(0.1);
+  opacity: 0;
+}
+.Overlay-msg.show{
+  opacity: 1;
+  transform: scale(1);
+  z-index: 25;
+  transition: all .5s ease-in-out;
+  transition-delay: .3s;
+}
+.Overlay-msg h1{
+  font-weight: 400;
+  text-shadow: 1px 2px black;
+  background: rgba(255, 255, 255, .2);
+  width: 100%;
+  padding: 1rem;
+  margin-bottom: 0;
+}
+.Overlay-msg p{
+  font-size: 2rem;
 }
