--- a/colours-palete-app/src/ColorBox.css
+++ b/colours-palete-app/src/ColorBox.css
@@ -3,10 +3,10 @@
   /* height of the palette (Parent) */
   height: 25%; 
   margin: 0 auto;
-  /* display: inline-block; */
+  display: inline-block;
   position: relative;
   cursor: pointer;
-  margin-bottom: -3.7px;
+  margin-bottom: -5px;
 }
 
 .SingleColorPalette .ColorBox{
@@ -19,7 +19,7 @@
   width: 30%;
   height: 20%;
   position: absolute;
-  /* display: inline-block; */
+  display: inline-block;
   top:50%;
   left: 50%;
   transform: translate(-50%, -50%);
