--- a/valencia/src/pages/index.scss
+++ b/valencia/src/pages/index.scss
@@ -11,13 +11,12 @@ body{
   background-image: linear-gradient(315deg, #000000 0%, #5e5368 74%) no-repeat;
   font-family: 'Roboto', 'Fira Sans', sans-serif;
 }
-// NAV 3 parts
+//  =====================   NAV 3 parts   =====================
 nav{
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   height: 12rem;
   padding: 2rem;
-  border-bottom: 1px solid #aaa;
   transition: 125ms;
   // Overall React-Icons styles
     svg{
@@ -85,7 +84,7 @@ nav{
       svg{
         position: absolute;
         top: 10px;
-        left: 212px;
+        right: 12px;
       }
     }
     // Single-link
@@ -114,8 +113,20 @@ nav{
     }
   }
 }
-
-// FOOTER
+//  =====================   HOMEPAGE    =====================
+.Homepage{
+  position: relative;
+  .slide-show-size{
+    width: 100%!important;
+  }
+  .ss-thumbnails{
+    display: none;
+  }
+  .ss-arrows{
+    position: relative;
+  }
+}
+// ======================   FOOTER      =====================
 .footer{
   width: 100%;
   position: fixed;
@@ -125,11 +136,13 @@ nav{
   align-items: center;
   justify-content: space-around;
   .logoF{
-    background: url(https://static-mh.content.disney.io/starwars/assets/navigation/sw_logo_stacked-336c62367939.png)center no-repeat;
-    background-size: contain;
-    display: block;
-    width: 8rem;
-    height: 3rem;
+    a{
+      background: url(https://static-mh.content.disney.io/starwars/assets/navigation/sw_logo_stacked-336c62367939.png)center no-repeat;
+      background-size: contain;
+      display: block;
+      width: 8rem;
+      height: 3rem;
+    }
   }
   p{
     color: #aaa;
