--- a/valencia/src/pages/index.scss
+++ b/valencia/src/pages/index.scss
@@ -11,6 +11,7 @@ body{
   background-image: linear-gradient(315deg, #000000 0%, #5e5368 74%) no-repeat;
   font-family: 'Roboto', 'Fira Sans', sans-serif;
 }
+//  ============================================================
 //  =====================   NAV 3 parts   =====================
 nav{
   display: grid;
@@ -113,6 +114,7 @@ nav{
     }
   }
 }
+//  ============================================================
 //  =====================   HOMEPAGE    =====================
 .Homepage{
   position: relative;
@@ -126,8 +128,70 @@ nav{
     position: relative;
   }
 }
-// ======================   FOOTER      =====================
-.footer{
+//  ============================================================
+//  =====================   LISTER PAGE    =====================
+.Lister{
+  font-size: 1em;
+  color:#aaa;
+  padding: 0em 3em;
+  display: flex;
+  flex-direction: column;
+  .results{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    // Items
+    .ListerItem{
+      width: 20%;
+      padding: 1em;
+      border-right: 1px solid aliceblue;
+      margin: .5rem;
+        a{
+          text-decoration: none;
+          color:#aaa;
+            &:hover{
+              color: #fff;
+              text-decoration: underline;
+              font-weight: 600;
+            }
+        } 
+    }
+  }
+  .arrows{
+    display: flex;
+    justify-content: space-between;
+    svg{
+      cursor: pointer;
+      color: #aaa;
+    }
+  }
+}
+//  ============================================================
+// ========================   DETAIL    ========================
+.Detail{
+  font-size: 1em;
+  color:#aaa;
+  padding: 0em 3em;
+  text-align: center;
+  a{
+    text-decoration: none;
+    color:#aaa;
+    padding: 1em;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    box-shadow: 1px 2px 0px 1px aliceblue;
+    margin: 4rem;
+    display: block;
+    transition: all .125s;
+    &:hover{
+      box-shadow: 0px 0px 0px ;
+    }
+  }
+}
+//  ============================================================
+// ======================   FOOTER      ========================
+.Footer{
   width: 100%;
   position: fixed;
   bottom: 0;
