last viewed functionality completed

--- a/valencia/src/pages/index.scss
+++ b/valencia/src/pages/index.scss
@@ -127,7 +127,7 @@ nav{
     display: none;
   }
   .ss-arrows{
-    position: relative;
+    position: relative!important;
   }
 }
 //  ============================================================
